syntax = "proto3";
package proto.storage;

option go_package = "github.com/spinnaker/kleat/api/client/storage";

import "google/protobuf/wrappers.proto";

message SQL {
  // Whether this persistent store is enabled.
  google.protobuf.BoolValue enabled = 1;

  // Default database connection pool.
  ConnectionPool default = 2;

  // Migration database connection pool.
  ConnectionPool migration = 3;
}

// Default connection pool to Keel's datastore
message ConnectionPools {
    ConnectionPool default = 1;
}

// ConnectionPool confifugration for the SQL server
message ConnectionPool {
    // Database username
    string user = 1;
    // Database password
    string password = 2;
    // Database connection string. This needs to include server port
    // and database name as well
    string jdbcUrl = 3;
    // Database connection timeout in milliseconds
    int32 connectionTimeout = 4;
    // maxLifetime controls the maximum lifetime of a connection in
    // the pool in milliseconds.
    int32 maxLifetime = 5;
    // Maximum number of connections stored in the connection pool
    int32 maxPoolSize = 6;
}
